k8s/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-ingress
  namespace: chatapp
spec:
  ingressClassName: nginx
  rules:
    - host: chatapp.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /friends
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /messages
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
